# csci2952project

./: .gitignore  .pre-commit-config.yaml  Contrastive-14699330.err  Contrastive-14699330.out  README.md  pyproject.toml
.github/workflows/: ci.yml
figures/fig1/: fig1.py
figures/fig2/: fig2.py
figures/fig3/: fig3.py
figures/fig4/: fig4.py  fig4_batch.script  fig4_contrastive_batch.script  fig4_jepa_batch.script  fig4_multimae_batch.script  fig4_svgae_batch.script
jz_test/20251021_test_dataset/: debug_tensors.py  test_dataset.py
jz_test/20251119_test_tensor_dataset/: compare_loading.py  test_svg_dataset.py  test_tensor_dataset.py
runs/test_autoencoder/: events.out.tfevents.1762755709.gpu2002.oscar.ccv.brown.edu.2884331.0  events.out.tfevents.1762755975.gpu2002.oscar.ccv.brown.edu.919421.0  events.out.tfevents.1762917061.gpu2004.oscar.ccv.brown.edu.692208.0  events.out.tfevents.1762921215.gpu2004.oscar.ccv.brown.edu.2324637.0  events.out.tfevents.1762938813.gpu2004.oscar.ccv.brown.edu.1091935.0  events.out.tfevents.1762939717.gpu2004.oscar.ccv.brown.edu.3334580.0  events.out.tfevents.1762939962.gpu2004.oscar.ccv.brown.edu.3933913.0  events.out.tfevents.1762940088.gpu2004.oscar.ccv.brown.edu.67983.0  events.out.tfevents.1762940325.gpu2004.oscar.ccv.brown.edu.680084.0  events.out.tfevents.1762940622.gpu2004.oscar.ccv.brown.edu.1449898.0  events.out.tfevents.1762940656.gpu2004.oscar.ccv.brown.edu.1538771.0  events.out.tfevents.1762940776.gpu2004.oscar.ccv.brown.edu.1850083.0  events.out.tfevents.1762940837.gpu2004.oscar.ccv.brown.edu.2002246.0  events.out.tfevents.1762941674.gpu2004.oscar.ccv.brown.edu.4138103.0  events.out.tfevents.1762941759.gpu2004.oscar.ccv.brown.edu.158865.0  events.out.tfevents.1762941881.gpu2004.oscar.ccv.brown.edu.465344.0  events.out.tfevents.1762941980.gpu2004.oscar.ccv.brown.edu.709408.0  events.out.tfevents.1762942077.gpu2004.oscar.ccv.brown.edu.953288.0  events.out.tfevents.1762942177.gpu2004.oscar.ccv.brown.edu.1196182.0  events.out.tfevents.1762942402.gpu2004.oscar.ccv.brown.edu.1762917.0  events.out.tfevents.1762942465.gpu2004.oscar.ccv.brown.edu.1925856.0  events.out.tfevents.1762942892.gpu2004.oscar.ccv.brown.edu.2990077.0  events.out.tfevents.1762942931.gpu2004.oscar.ccv.brown.edu.3094247.0  events.out.tfevents.1762943022.gpu2004.oscar.ccv.brown.edu.3324015.0  events.out.tfevents.1762943142.gpu2004.oscar.ccv.brown.edu.3638258.0
scripts/: check_seq_len_discrepancy.py  contrastive_batch.script  contrastive_decoder_batch.script  download_batch.script  download_fonts.sh  eval_interpolation.py  eval_interpolation_multimae.py  eval_interpolation_universal.py  eval_linear_probe.py  eval_linear_probe_multimae.py  eval_reconstruction.py  eval_reconstruction_multimae.py  eval_retrieval.py  eval_utils.py  extract_glyphs.py  extract_svg_sample.py  jepa_batch.script  jepa_decoder_batch.script  latent_pca.py  precompute_dino_batch.script  precompute_dino_embeddings.py  precompute_dino_patches.py  preprocess.py  preprocess_fonts.py  run_eval_retrieval_autoencoder.sbatch  run_interp_contrastive_svgvae_jepa.sh  run_interp_multimae.sh  test_contrastive.py  test_dataloader.py  test_jepa.py  test_mae.py  test_multimae.py  test_svg_autoencoder.py  test_svgmae.py  train_contrastive.py  train_decoder_from_contrastive.py  train_decoder_from_jepa.py  train_decoder_from_multimae.py  train_jepa.py  train_multimae.py  (+2 more)
scripts/sbatch_linprobe/: 01_contrastive_linprobe.sbatch  02_contrastive_7_linprobe.sbatch  03_contrastive_temp_linprobe.sbatch  04_contrastive_temp_7_linprobe.sbatch  05_jepa_7_linprobe.sbatch  06_jepa_default_linprobe.sbatch  07_jepa_layer_linprobe.sbatch  08_jepa_layer_7_linprobe.sbatch  09_contrastive_linprobe_family.sbatch  10_contrastive_7_linprobe_family.sbatch  11_contrastive_temp_linprobe_family.sbatch  12_contrastive_temp_7_linprobe_family.sbatch  13_jepa_7_linprobe_family.sbatch  14_jepa_default_linprobe_family.sbatch  15_jepa_layer_linprobe_family.sbatch  16_jepa_layer_7_linprobe_family.sbatch  17_ae_linprobe.sbatch  18_ae_linprobe_family.sbatch
src/vecssl/: trainer.py  util.py
src/vecssl/data/: README.md  dataset.py  geom.py  svg.py  svg_command.py  svg_path.py  svg_primitive.py  svg_tensor.py  utils.py
src/vecssl/models/: README.md  __init__.py  base.py  basic_blocks.py  config.py  contrastive.py  dual_autoencoder.py  jepa.py  loss.py  model.py  multi_mae.py  multimae.py  svgmae.py  utils.py
src/vecssl/models/layers/: attention.py  functional.py  improved_transformer.py  positional_encoding.py  transformer.py  utils.py
tests/: test_jepa.py  test_logging_setup.py  test_models_base.py  test_trainer.py
