[project]
name = "vecssl"
version = "0.1.0"
description = "SSL with vector primitives"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true